<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/questions"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_my_questions" />
        <item
            android:id="@+id/questions_fo_me"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_questions_for_me" />
        <item
            android:id="@+id/my_answers"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_my_answers" />
        <item
            android:id="@+id/answers_for_me"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_answers_for_me" />
        <!--<item-->
            <!--android:id="@+id/answers"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="@string/action_answers" />-->
        <!--<item-->
            <!--android:id="@+id/slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_menu_share"
                android:title="Settings" />
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        </menu>
    </item>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
