<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/question_image_view"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/ic_launcher_background"
            android:contentDescription="@string/title_question_description_image" />

        <ImageView
            android:id="@+id/answer_image_view"
            android:layout_width="100dp"
            android:layout_height="127dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/ic_launcher_background"
            android:contentDescription="@string/title_answer_description_image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="253dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_question" />

            <TextView
                android:id="@+id/question_text_view"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/from_label_text_view"
                android:layout_width="44dp"
                android:layout_height="match_parent"
                android:text="@string/title_from" />

            <TextView
                android:id="@+id/question_from_text_view"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:textSize="12sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_answer_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_answer" />

            <TextView
                android:id="@+id/my_answer_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
